--- a/simpatrik.html
+++ b/simpatrik.html
@@ -16,22 +16,22 @@
   </head>
   <body id="Home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light fw-bold fst-italic shadow-sm fixed-top" style="background-color: #93deff">
+    <nav class="navbar navbar-expand-lg navbar-light fw-bold fst-italic shadow-sm fixed-top" style="background-color: #6bf3e8">
       <div class="container">
-        <a class="navbar-brand" href="#" style="color: #f7f7f7">Biologi</a>
+        <a class="navbar-brand" href="#">Biologi</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html" style="color: #f7f7f7">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="TentangKami.html" style="color: #f7f7f7">Tentang Kami</a>
+              <a class="nav-link active" aria-current="page" href="TentangKami.html">Tentang Kami</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: #f7f7f7"> Materi </a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Materi </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="index.html">Spesiasi</a></li>
                 <li><a class="dropdown-item" href="index.html">Spesies</a></li>
@@ -48,11 +48,11 @@
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
       <div class="container">
-        <h1 class="display-5 fst-italic fw-bold" data-aos="fade" style="color: #f7f7f7">Pengisolasian Simpatrik</h1>
+        <h1 class="display-5 fst-italic fw-bold" data-aos="fade">Pengisolasian Simpatrik</h1>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#333744"
+          fill="#ffffff"
           fill-opacity="1"
           d="M0,192L40,197.3C80,203,160,213,240,197.3C320,181,400,139,480,138.7C560,139,640,181,720,176C800,171,880,117,960,117.3C1040,117,1120,171,1200,202.7C1280,235,1360,245,1400,250.7L1440,256L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
         ></path>
@@ -68,15 +68,15 @@
             <img src="asset/1.png" class="img-custom" data-aos="fade-left" />
           </div>
           <div class="col-md-6">
-            <p class="fw-bold mt-3" data-aos="zoom-in-up" style="color: #f7f7f7">
+            <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">
               Spesiasi Simpantrik adalah suatu proses Ketika spesies baru berevolusi dari suatu spesies nenek moyang yang tinggal diwilayah yang sama. Simpantrik adalah istilah yang mengacu pada organisme diwilayah yang sama.
             </p>
           </div>
         </div>
-        <hr style="color: #f7f7f7; height: 2px" />
+        <hr />
         <div class="row mt-5 justify-content-center">
           <div class="col-md-6">
-            <p class="fw-bold mt-3" data-aos="zoom-in-up" style="color: #f7f7f7">
+            <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">
               Spesiasi Simpantrik terjadi melalui beberapa cara, yaitu:<br />
               <br />
               1. Isolasi Tingkah Laku<br />
@@ -91,20 +91,20 @@
             <img src="asset/simpatrik.png" width="200" height="200" data-aos="fade-left" class="mb-4" />
           </div>
         </div>
-        <hr style="color: #f7f7f7; height: 2px" />
+        <hr />
         <div class="row mt-5 justify-content-center">
           <div class="col-md text-center">
-            <img src="asset/1.png" class="img-custom mb-3" data-aos="fade-left" />
+            <img src="asset/2.png" class="img-custom" data-aos="fade-left" />
           </div>
           <div class="col-md-6">
             <div class="row" style="margin-bottom: 5rem" data-aos="fade-up">
-              <div id="carouselExampleControlsNoTouching1" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
+              <div id="carouselExampleControlsNoTouching1" class="carousel carousel-dark slide" data-bs-touch="false" data-bs-interval="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto; background-color: #616571">
+                    <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto">
                       <div class="card-body">
-                        <p class="card-text fw-bold" style="color: #f7f7f7">Isolasi Tingkah Laku</p>
-                        <p class="card-text fw-bold" style="color: #f7f7f7">
+                        <p class="card-text fw-bold">Isolasi Tingkah Laku</p>
+                        <p class="card-text text-secondary fw-bold">
                           Isolasi Tingkah Laku dapat mencegah terjadinya reproduksi jika, misalnya , suatu anggota populasi aktif pada malam hari (noktural), sedangkan anggota lainnya aktif disiang hari (dirual). Anggota populasi tersebut
                           tidak dapat berreproduksi, walapun mereka berada didaerah yang sama.
                         </p>
@@ -112,10 +112,10 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto; background-color: #616571">
+                    <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto">
                       <div class="card-body">
-                        <p class="card-text fw-bold" style="color: #f7f7f7">Isolasi Ekologis</p>
-                        <p class="card-text fw-bold" style="color: #f7f7f7">
+                        <p class="card-text fw-bold">Isolasi Ekologis</p>
+                        <p class="card-text text-secondary fw-bold">
                           Isolasi Ekologis dapat menyebabkan isolasi reproduksi yang kemudian diikuti dengan spesiasi jika anggota populasi menempati habitat yang berbeda. <br />
                           Contohnya : <br />
                           <br />
@@ -126,10 +126,10 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto; background-color: #616571">
+                    <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto">
                       <div class="card-body">
-                        <p class="card-text fw-bold" style="color: #f7f7f7">Isolasi Musiman</p>
-                        <p class="card-text fw-bold" style="color: #f7f7f7">
+                        <p class="card-text fw-bold">Isolasi Musiman</p>
+                        <p class="card-text text-secondary fw-bold">
                           Isolasi Musiman adalah isolasi yang disebabkan oleh perbedaan masa aktif reproduksi anggota populasi dalam suatu daerah. Contohnya :<br />
                           <br />
                           1.Beberapa spesies tumbuhan berbunga pada waktu yang berbeda.<br />
@@ -139,10 +139,10 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto; background-color: #616571">
+                    <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto">
                       <div class="card-body">
-                        <p class="card-text fw-bold" style="color: #f7f7f7">Isolasi Mekanis</p>
-                        <p class="card-text fw-bold" style="color: #f7f7f7">
+                        <p class="card-text fw-bold">Isolasi Mekanis</p>
+                        <p class="card-text text-secondary fw-bold">
                           Isolasi Mekanis Terjadi pada hewan atau tumbuhan yang reproduksinya dihambat oleh letak atau struktur alat kelamin ( genitalia ) yang tidak sesuai dengan pasangannya meskipun berasal dari satu spesies yang sama.
                           <br />
                           Contohnya :
@@ -154,10 +154,10 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto; background-color: #616571">
+                    <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto">
                       <div class="card-body">
-                        <p class="card-text fw-bold" style="color: #f7f7f7">Isolasi Gamet</p>
-                        <p class="card-text fw-bold" style="color: #f7f7f7">
+                        <p class="card-text fw-bold">Isolasi Gamet</p>
+                        <p class="card-text text-secondary fw-bold">
                           Isolasi Gamet adalah mengisolasi organisme yang matang secara reproduksi pada waktu yang sama, Contoh:<br />
                           <br />
                           1.Sperma yang gagal bertahan hidup didalam oviduk<br />
@@ -167,10 +167,10 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto; background-color: #616571">
+                    <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto">
                       <div class="card-body">
-                        <p class="card-text fw-bold" style="color: #f7f7f7">Isolasi Hibrid</p>
-                        <p class="card-text fw-bold" style="color: #f7f7f7">
+                        <p class="card-text fw-bold">Isolasi Hibrid</p>
+                        <p class="card-text text-secondary fw-bold">
                           Isolasi Hibrid terjadi Ketika dua organisme yang berbeda melakukan perkawinan, tetapi zigot hybrid yang terbentuk gagal berkembang mencapai tingkat kematangan seksual. Kalaupun mampu berkembang mencapai tingkat
                           kematangan seksual, individu hibrid yang terbentuk itu fertil atau steril. <br />
                           Contohnya: <br />
@@ -196,7 +196,7 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#93deff"
+          fill="#6bf3e8"
           fill-opacity="1"
           d="M0,192L34.3,208C68.6,224,137,256,206,234.7C274.3,213,343,139,411,117.3C480,96,549,128,617,149.3C685.7,171,754,181,823,170.7C891.4,160,960,128,1029,144C1097.1,160,1166,224,1234,229.3C1302.9,235,1371,181,1406,154.7L1440,128L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
         ></path>
@@ -205,8 +205,8 @@
     <!-- Akhir Spesiasi -->
 
     <!-- footer -->
-    <footer style="background-color: #93deff" class="p-3">
-      <p class="fst-italic fw-bold text-center" style="color: #f7f7f7">Created with By Kelompok 7</p>
+    <footer style="background-color: #6bf3e8" class="p-3">
+      <p class="fst-italic fw-bold text-center">Created with By Kelompok 7</p>
     </footer>
     <!-- akhir footer -->
 
