--- a/TentangKami.html
+++ b/TentangKami.html
@@ -16,27 +16,27 @@
   </head>
   <body id="Home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light fw-bold fst-italic shadow-sm fixed-top" style="background-color: #93deff">
+    <nav class="navbar navbar-expand-lg navbar-light fw-bold fst-italic shadow-sm fixed-top" style="background-color: #6bf3e8">
       <div class="container">
-        <a class="navbar-brand" href="#" style="color: #f7f7f7;">Biologi</a>
+        <a class="navbar-brand" href="#">Biologi</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html" style="color: #f7f7f7;">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="TentangKami.html" style="color: #f7f7f7;">Tentang Kami</a>
+              <a class="nav-link active" aria-current="page" href="TentangKami.html">Tentang Kami</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: #f7f7f7;"> Materi </a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Materi </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="index.html" >Spesiasi</a></li>
-                <li><a class="dropdown-item" href="index.html" >Spesies</a></li>
-                <li><a class="dropdown-item" href="index.html" >Mekanisme Pengisolasian</a></li>
-                <li><a class="dropdown-item" href="index.html" >Istilah Dalam Spesiasi</a></li>
+                <li><a class="dropdown-item" href="index.html">Spesiasi</a></li>
+                <li><a class="dropdown-item" href="index.html">Spesies</a></li>
+                <li><a class="dropdown-item" href="index.html">Mekanisme Pengisolasian</a></li>
+                <li><a class="dropdown-item" href="index.html">Istilah Dalam Spesiasi</a></li>
               </ul>
             </li>
           </ul>
@@ -48,11 +48,11 @@
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
       <div class="container">
-        <h1 class="display-5 fst-italic fw-bold" data-aos="fade" style="color: #f7f7f7;">Tentang Kami</h1>
+        <h1 class="display-5 fst-italic fw-bold" data-aos="fade">Tentang Kami</h1>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#333744"
+          fill="#ffffff"
           fill-opacity="1"
           d="M0,192L40,197.3C80,203,160,213,240,197.3C320,181,400,139,480,138.7C560,139,640,181,720,176C800,171,880,117,960,117.3C1040,117,1120,171,1200,202.7C1280,235,1360,245,1400,250.7L1440,256L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
         ></path>
@@ -63,16 +63,16 @@
     <!-- Tentang Kami -->
     <section id="about"  >
       <div class="container"  >
-        <div class="row " data-aos="fade-left">
-            <div id="carouselExampleFade" class="carousel  slide carousel-fade" data-bs-ride="carousel">
+        <div class="row ">
+            <div id="carouselExampleFade" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner " >
                   <div class="carousel-item active" >
                       <div class="row justify-content-center">
-                        <div class="card text-center shadow-sm mx-3" style="width: 18rem; background-color: #616571;">
-                            <img src="asset/w1.png" class="card-img-top" style="width: 150px; margin: auto" />
+                        <div class="card text-center shadow-sm mx-3" style="width: 18rem">
+                            <img src="asset/w1.jpg" class="card-img-top" style="width: 150px; margin: auto" />
                             <div class="card-body">
-                              <h5 class="card-title" style="color: #f7f7f7;">Dea Agustina</h5>
-                              <p class="card-text" style="color: #f7f7f7;">(13)</p>
+                              <h5 class="card-title">Dea Agustina</h5>
+                              <p class="card-text">(13)</p>
                             </div>
                           </div>
                       </div>
@@ -80,33 +80,33 @@
                   <div class="carousel-item">
                       
                     <div class="row justify-content-center">
-                        <div class="card text-center shadow-sm mx-3" style="width: 18rem; background-color: #616571;">
-                            <img src="asset/w2.png" class="card-img-top" style="width: 150px; margin: auto" />
+                        <div class="card text-center shadow-sm mx-3" style="width: 18rem">
+                            <img src="asset/w2.jpg" class="card-img-top" style="width: 150px; margin: auto" />
                             <div class="card-body">
-                              <h5 class="card-title" style="color: #f7f7f7;">Dinda Kharisma</h5>
-                              <p class="card-text" style="color: #f7f7f7;">(14)</p>
+                              <h5 class="card-title">Dinda Kharisma</h5>
+                              <p class="card-text">(14)</p>
                             </div>
                           </div>
                       </div>
                   </div>
                   <div class="carousel-item">
                     <div class="row justify-content-center">
-                        <div class="card text-center shadow-sm mx-3" style="width: 18rem; background-color: #616571;">
-                            <img src="asset/m2.png" class="card-img-top" style="width: 150px; margin: auto" />
+                        <div class="card text-center shadow-sm mx-3" style="width: 18rem">
+                            <img src="asset/m2.jpg" class="card-img-top" style="width: 150px; margin: auto" />
                             <div class="card-body">
-                              <h5 class="card-title" style="color: #f7f7f7;">Dwi Kuncoro</h5>
-                              <p class="card-text" style="color: #f7f7f7;">(15)</p>
+                              <h5 class="card-title">Dwi Kuncoro</h5>
+                              <p class="card-text">(15)</p>
                             </div>
                           </div>
                       </div>
                   </div>
                   <div class="carousel-item">
                     <div class="row justify-content-center">
-                        <div class="card text-center shadow-sm mx-3" style="width: 18rem; background-color: #616571;">
-                            <img src="asset/m1.png" class="card-img-top" style="width: 150px; margin: auto" />
+                        <div class="card text-center shadow-sm mx-3" style="width: 18rem">
+                            <img src="asset/m1.jpg" class="card-img-top" style="width: 150px; margin: auto" />
                             <div class="card-body">
-                              <h5 class="card-title" style="color: #f7f7f7;">Farid Nur R</h5>
-                              <p class="card-text" style="color: #f7f7f7;">(16)</p>
+                              <h5 class="card-title">Farid Nur R</h5>
+                              <p class="card-text">(16)</p>
                             </div>
                           </div>
                       </div>
@@ -130,24 +130,17 @@
 
     <!-- Tambahan -->
     <section id="tambahan">
-        <div class="container text-center" data-aos="fade-right" style="padding-bottom: 5rem;">
-            <p style="color: #f7f7f7;" class="fw-bold">Hallo guys kami dari kelompok 7 ingin membuatkan sebuah website edukasi biologi dengan materi tentang Spesiasi Pada Mekanisme Pengisolasian 
+        <div class="container text-center" style="padding-bottom: 5rem;">
+            <p>Hallo guys kami dari kelompok 7 ingin membuatkan sebuah website edukasi biologi dengan materi tentang Spesiasi Pada Mekanisme Pengisolasian 
                 di Spesiasi Simpatrik dan Alopatrik.
                 </p>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-          <path
-            fill="#93deff"
-            fill-opacity="1"
-            d="M0,192L40,197.3C80,203,160,213,240,197.3C320,181,400,139,480,138.7C560,139,640,181,720,176C800,171,880,117,960,117.3C1040,117,1120,171,1200,202.7C1280,235,1360,245,1400,250.7L1440,256L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-          ></path>
-        </svg>
     </section>
     <!-- Akhir Tambahan -->
 
     <!-- footer -->
-    <footer style="background-color: #93deff" class="p-3">
-      <p class="fst-italic fw-bold text-center" style="color: #f7f7f7;">Created with By Kelompok 7</p>
+    <footer style="background-color: #6bf3e8" class="p-3">
+      <p class="fst-italic fw-bold text-center">Created with By Kelompok 7</p>
     </footer>
     <!-- akhir footer -->
 
